fix/NNO-7039 fixed InputSelect InputText overflow

--- a/frontend/n2o-framework/src/sass/n2o/controls/InputText.scss
+++ b/frontend/n2o-framework/src/sass/n2o/controls/InputText.scss
@@ -51,3 +51,7 @@
 .n2o-input-text__suffix {
     margin-left: $input-padding-x;
 }
+
+.n2o-input.form-control.n2o-input-text {
+    text-overflow: ellipsis;
+}
